@startuml
abstract "ASTVisitor" as C_0009526518735163479013
abstract C_0009526518735163479013 {
+~ASTVisitor() = default : void
..
{abstract} +visit(CharLiteralNode * node) = 0 : void
{abstract} +visit(EmptyStatementNode * node) = 0 : void
{abstract} +visit(ProcedureCallNode * node) = 0 : void
{abstract} +visit(RepeatUntilNode * node) = 0 : void
{abstract} +visit(ForLoopNode * node) = 0 : void
{abstract} +visit(WhileLoopNode * node) = 0 : void
{abstract} +visit(CaseStatementNode * node) = 0 : void
{abstract} +visit(IfStatementNode * node) = 0 : void
{abstract} +visit(AssignmentStatementNode * node) = 0 : void
{abstract} +visit(CompoundStatementNode * node) = 0 : void
{abstract} +visit(FunctionCallNode * node) = 0 : void
{abstract} +visit(UnaryOpNode * node) = 0 : void
{abstract} +visit(BinaryOpNode * node) = 0 : void
{abstract} +visit(FieldAccessNode * node) = 0 : void
{abstract} +visit(ArrayAccessNode * node) = 0 : void
{abstract} +visit(VarAccessNode * node) = 0 : void
{abstract} +visit(ProgramNode * node) = 0 : void
{abstract} +visit(BooleanLiteralNode * node) = 0 : void
{abstract} +visit(StringLiteralNode * node) = 0 : void
{abstract} +visit(RealLiteralNode * node) = 0 : void
{abstract} +visit(IntegerLiteralNode * node) = 0 : void
{abstract} +visit(FunctionDeclarationNode * node) = 0 : void
{abstract} +visit(ProcedureDeclarationNode * node) = 0 : void
{abstract} +visit(TypeDeclarationNode * node) = 0 : void
{abstract} +visit(VarDeclarationNode * node) = 0 : void
{abstract} +visit(ConstDeclarationNode * node) = 0 : void
{abstract} +visit(RangeTypeNode * node) = 0 : void
{abstract} +visit(EnumeratedTypeNode * node) = 0 : void
{abstract} +visit(RecordTypeNode * node) = 0 : void
{abstract} +visit(ArrayTypeNode * node) = 0 : void
{abstract} +visit(SimpleTypeNode * node) = 0 : void
{abstract} +visit(BlockNode * node) = 0 : void
__
}
enum "DataType" as C_0005733058170336282203
enum C_0005733058170336282203 {
UNKNOWN
INTEGER
REAL
CHAR
BOOLEAN
STRING
SUBRANGE
ENUMERATED
ARRAY
RECORD
VOID
ERROR
}
class "ASTBuilder" as C_0002324044738747710719
class C_0002324044738747710719 {
+ASTBuilder(std::shared_ptr<TreeNode> root) : void
..
+build() : std::shared_ptr<ProgramNode>
-buildArrayType(std::shared_ptr<TreeNode> node) : std::shared_ptr<TypeNode>
-buildAssignmentStatement(std::shared_ptr<TreeNode> node) : std::shared_ptr<AssignmentStatementNode>
-buildBlock(std::shared_ptr<TreeNode> node) : std::shared_ptr<BlockNode>
-buildCaseStatement(std::shared_ptr<TreeNode> node) : std::shared_ptr<CaseStatementNode>
-buildCompoundStatement(std::shared_ptr<TreeNode> node) : std::shared_ptr<CompoundStatementNode>
-buildConstDeclarations(std::shared_ptr<TreeNode> node) : std::vector<std::shared_ptr<ConstDeclarationNode>>
-buildDeclarationPart(std::shared_ptr<TreeNode> node) : std::vector<std::shared_ptr<DeclarationNode>>
-buildEnumeratedType(std::shared_ptr<TreeNode> node) : std::shared_ptr<TypeNode>
-buildExpression(std::shared_ptr<TreeNode> node) : std::shared_ptr<ExpressionNode>
-buildForLoop(std::shared_ptr<TreeNode> node) : std::shared_ptr<ForLoopNode>
-buildFormalParameters(std::shared_ptr<TreeNode> node) : std::vector<std::shared_ptr<VarDeclarationNode>>
-buildFunctionCall(std::shared_ptr<TreeNode> node) : std::shared_ptr<ExpressionNode>
-buildFunctionDeclaration(std::shared_ptr<TreeNode> node) : std::shared_ptr<FunctionDeclarationNode>
-buildIfStatement(std::shared_ptr<TreeNode> node) : std::shared_ptr<IfStatementNode>
-buildLiteral(std::shared_ptr<TreeNode> node) : std::shared_ptr<ExpressionNode>
-buildProcedureCall(std::shared_ptr<TreeNode> node) : std::shared_ptr<ProcedureCallNode>
-buildProcedureDeclaration(std::shared_ptr<TreeNode> node) : std::shared_ptr<ProcedureDeclarationNode>
-buildProgram(std::shared_ptr<TreeNode> node) : std::shared_ptr<ProgramNode>
-buildRangeType(std::shared_ptr<TreeNode> node) : std::shared_ptr<TypeNode>
-buildRecordType(std::shared_ptr<TreeNode> node) : std::shared_ptr<TypeNode>
-buildRepeatUntil(std::shared_ptr<TreeNode> node) : std::shared_ptr<RepeatUntilNode>
-buildStatement(std::shared_ptr<TreeNode> node) : std::shared_ptr<StatementNode>
-buildType(std::shared_ptr<TreeNode> node) : std::shared_ptr<TypeNode>
-buildTypeDeclarations(std::shared_ptr<TreeNode> node) : std::vector<std::shared_ptr<TypeDeclarationNode>>
-buildVarDeclarations(std::shared_ptr<TreeNode> node) : std::vector<std::shared_ptr<VarDeclarationNode>>
-buildVariableAccess(std::shared_ptr<TreeNode> node) : std::shared_ptr<ExpressionNode>
-buildWhileLoop(std::shared_ptr<TreeNode> node) : std::shared_ptr<WhileLoopNode>
-setSourceLocation<T>(std::shared_ptr<T> astNode, std::shared_ptr<TreeNode> sourceNode) : std::shared_ptr<T>
__
-parseTreeRoot : std::shared_ptr<TreeNode>
}
enum "ObjectType" as C_0004719306933154942241
enum C_0004719306933154942241 {
RESERVE
CONSTANT
VARIABLE
TYPE
PROCEDURE
FUNCTION
}
class "TabEntry" as C_0014853596527588905923
class C_0014853596527588905923 {
__
+adr : int
+lev : int
+link : int
+name : std::string
+nrm : int
+obj : ObjectType
+ref : int
+type : DataType
}
class "AtabEntry" as C_0004096944872762023593
class C_0004096944872762023593 {
__
+elsz : int
+eref : int
+etyp : DataType
+high : int
+low : int
+size : int
+xtyp : DataType
}
class "BtabEntry" as C_0017134124581293694981
class C_0017134124581293694981 {
__
+last : int
+lpar : int
+psze : int
+vsze : int
}
class "SymbolTable" as C_0004181868659518474874
class C_0004181868659518474874 {
+SymbolTable() : void
+~SymbolTable() : void
..
+enter(std::string name, ObjectType kind, DataType type, int lev) : int
-initPredefined() : void
+lookup(std::string name, int lastIndex) const : int
__
+atab : std::vector<AtabEntry>
+btab : std::vector<BtabEntry>
+currentBlock : int
+tab : std::vector<TabEntry>
+tabTop : int
}
class "SemanticVisitor" as C_0011603293602328420391
class C_0011603293602328420391 {
+SemanticVisitor() = default : void
..
-getDataTypeSize(DataType type) : int
+getSymbolTable() : SymbolTable &
+getSymbolTable() const : const SymbolTable &
+hasErrors() const : bool
-isCompatible(DataType target, int targetRef, DataType source, int sourceRef) : bool
+printErrors() const : void
-reportError(ASTNode * node, const std::string & message) : void
-resolveBinaryType(const std::string & op, DataType left, DataType right) : DataType
+visit(BooleanLiteralNode * node) : void
+visit(EmptyStatementNode * node) : void
+visit(VarAccessNode * node) : void
+visit(ArrayAccessNode * node) : void
+visit(FieldAccessNode * node) : void
+visit(BinaryOpNode * node) : void
+visit(UnaryOpNode * node) : void
+visit(FunctionCallNode * node) : void
+visit(CompoundStatementNode * node) : void
+visit(AssignmentStatementNode * node) : void
+visit(IfStatementNode * node) : void
+visit(CaseStatementNode * node) : void
+visit(WhileLoopNode * node) : void
+visit(ForLoopNode * node) : void
+visit(RepeatUntilNode * node) : void
+visit(ProcedureCallNode * node) : void
+visit(CharLiteralNode * node) : void
+visit(StringLiteralNode * node) : void
+visit(RealLiteralNode * node) : void
+visit(IntegerLiteralNode * node) : void
+visit(RangeTypeNode * node) : void
+visit(EnumeratedTypeNode * node) : void
+visit(RecordTypeNode * node) : void
+visit(ArrayTypeNode * node) : void
+visit(SimpleTypeNode * node) : void
+visit(FunctionDeclarationNode * node) : void
+visit(ProcedureDeclarationNode * node) : void
+visit(TypeDeclarationNode * node) : void
+visit(VarDeclarationNode * node) : void
+visit(ConstDeclarationNode * node) : void
+visit(BlockNode * node) : void
+visit(ProgramNode * node) : void
__
-activeLoopCounters : std::vector<std::string>
-currentLevel : int
-currentVisibilityBlock : int
-errors : std::vector<SemanticError>
-symbolTable : SymbolTable
}
class "SemanticAnalyzer" as C_0003514385116050589137
class C_0003514385116050589137 {
+SemanticAnalyzer(std::shared_ptr<TreeNode> root) : void
+~SemanticAnalyzer() : void
..
+analyse() : std::shared_ptr<ProgramNode>
+getDecoratedAST() const : std::shared_ptr<ProgramNode>
+getSymbolTable() : SymbolTable &
+hasErrors() const : bool
+printAllSemanticInfo() const : void
+printArrayTable() const : void
+printBlockTable() const : void
+printDecoratedAST() const : void
+printErrors() const : void
+printSymbolTable() const : void
__
-builder : ASTBuilder *
-decoratedAST : std::shared_ptr<ProgramNode>
-parseTreeRoot : std::shared_ptr<TreeNode>
-visitor : SemanticVisitor
}
C_0014853596527588905923 o-- C_0004719306933154942241 : +obj
C_0014853596527588905923 o-- C_0005733058170336282203 : +type
C_0004096944872762023593 o-- C_0005733058170336282203 : +xtyp
C_0004096944872762023593 o-- C_0005733058170336282203 : +etyp
C_0004181868659518474874 ..> C_0004719306933154942241
C_0004181868659518474874 ..> C_0005733058170336282203
C_0004181868659518474874 o-- C_0014853596527588905923 : +tab
C_0004181868659518474874 o-- C_0004096944872762023593 : +atab
C_0004181868659518474874 o-- C_0017134124581293694981 : +btab
C_0011603293602328420391 ..> C_0005733058170336282203
C_0011603293602328420391 o-- C_0004181868659518474874 : -symbolTable
C_0009526518735163479013 <|-- C_0011603293602328420391
C_0003514385116050589137 ..> C_0004181868659518474874
C_0003514385116050589137 o-- C_0011603293602328420391 : -visitor
C_0003514385116050589137 --> C_0002324044738747710719 : -builder

'Generated with clang-uml, version 0.6.2
'LLVM version Ubuntu clang version 18.1.3 (1ubuntu1)
@enduml
